--- a/templates/view.venuelist.html
+++ b/templates/view.venuelist.html
@@ -20,7 +20,7 @@
 				</div>
 			</header>
 
-			<div class="lunch-venue-guests lunch-animate" ng-class="{empty: venue.guests.length == 0}">
+			<div class="lunch-venue-guests" ng-class="{'lunch-guests-empty': venue.guests.length == 0}">
 				<ul>
 					<li class="lunch-venue-guest lunch-animate" ng-repeat="user in venue.guests">
 						<img src="{{user.ava}}" class="lunch-user-image" alt="{{user.nick}}">
