--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -33,10 +33,12 @@
 		</div>
 
 
-		<div class="lunch-venue-guests lunch-animate" ng-show="venue.guests.length">
-			<div class="lunch-venue-guest lunch-animate" ng-repeat="user in venue.guests">
-				<img src="{{user.ava}}" class="lunch-user-image" alt="{{user.nick}}">
-			</div>
+		<div class="lunch-venue-guests" ng-class="{'lunch-guests-empty': venue.guests.length == 0}">
+			<ul>
+				<li class="lunch-venue-guest lunch-animate" ng-repeat="user in venue.guests">
+					<img src="{{user.ava}}" class="lunch-user-image" alt="{{user.nick}}">
+				</li>
+			</ul>
 		</div>
 	</section>
 
