--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -1,4 +1,4 @@
-<article class="lunch-view-venue lunch-animate">
+<main class="lunch-view-venue lunch-animate">
 
 	<header>
 		<a ng-click="back()" class="lunch-fn-back">
@@ -114,4 +114,4 @@
 		</form>
 	</section>
 	-->
-</article>
+</main>
