--- a/dev/sass/_util.grid.scss
+++ b/dev/sass/_util.grid.scss
@@ -10,14 +10,47 @@
 // Contain the Grid
 
 .lunch-grid-container {
-
 }
 
 
 .lunch-grid-column {
-	
 	float: none;
-
 	width: 100%;
-	
+}
+
+
+main {
+	max-width: 620px;
+	margin: {
+		left: 20px;
+		right: 20px;
+	}
+}
+
+@mixin lunch-main-screen-s() {
+	main {
+		max-width: 620px;
+		margin: {
+			left: 60px;
+			right: 20px;
+		}
+	}
+}
+
+
+
+/* Collect all Medium Screen Styles here */
+
+@mixin lunch-grid-screen-s-mixin() {
+
+	@include lunch-main-screen-s();
+
+}
+
+// Apply
+
+@media screen and (min-width: $lunch-grid-break-s) {
+
+	@include lunch-grid-screen-s-mixin;
+
 }
