--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -34,30 +34,7 @@
 				<img src="../static/img/logo.png" alt="">
 			</a>
 
-			<!-- Nav -->
-			<nav class="lunch-nav">
-
-				<!-- Account (Add ctrl somewhere, or directive)-->
-				<div class="lunch-account">
-					<img src="{{user.ava}}" alt="" class="lunch-account-image">
-					<div class="lunch-account-name">{{details.user.name}}</div>
-				</div>
-
-				<ul class="lunch-nav-list">
-					<li class="lunch-nav-elem">
-						<a href="#/venues" class="lunch-fn-xx">Venues</a>
-					</li>
-					<li class="lunch-nav-elem">
-						<a href="#/" class="lunch-fn-new">New Venue</a>
-					</li>
-					<li class="lunch-nav-elem">
-						<a href="#/settings" class="lunch-fn-settings">Profile</a>
-					</li>
-					<li class="lunch-nav-elem" ng-show="user.admin">
-						<a href="#/admin" class="lunch-fn-settings">Admin Panel</a>
-					</li>
-				</ul>
-			</nav>
+			<nav lp-navi></nav>
 		</header>
 
 		<!-- Error -->
