--- a/templates/view.venuelist.html
+++ b/templates/view.venuelist.html
@@ -14,7 +14,7 @@
 				<header class="lunch-venue-header">
 					<h2 class="lunch-venue-title" ng-click="showDetail(venue._id)">{{venue.name}}</h2>
 					<div class="lunch-venue-info">
-						<span ng-show="venue.comc" class="lunch-venue-commentcount">
+						<span ng-show="venue.comc" ng-click="showDetail(venue._id)" class="lunch-venue-commentcount">
 							<span class="lunch-venue-commentcount-arrow">&nbsp;</span>{{venue.comc}} Comments
 						</span>
 						<a href="{{venue.url}}" class="lunch-fn-menu" target="blank">View Menu</a>
