--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -43,7 +43,7 @@
 		<!-- Content -->
 
 		<div ng-controller="ViewController" ng-class="stateAnimClass">
-			<div ng-view class="lunch-animate lunch-view-container lunch-apppage-body"></div>
+			<div ng-view autoscroll class="lunch-animate lunch-view-container lunch-apppage-body"></div>
 		</div>
 
 	</body>
