--- a/dev/sass/_util.animations.scss
+++ b/dev/sass/_util.animations.scss
@@ -84,7 +84,8 @@
 
 	.lunch-view-container.ng-enter {
 		position: fixed;
-		top:0;left:0;
+		top:0;
+		left:0;
 		@include transform(translateX(100%));
 	}
 
