--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -1,32 +1,71 @@
 <div class="lunch-view-settings">
 
+	<header>
+		<h1>{{user.nick}}</h1>
+		<p>{{user.mail}}</p>
+	</header>
+
 	<section>
-		<h1>Username</h1>
+		<h3>Change Item</h3>
 		<div>
-			<img src="" alt="profile picture">
+			<img ng-src="user.item" alt="profile item"
+				ng-class="{lunch-item-front: 'user.item.front'}">
+			<img ng-src="user.ava" alt="profile picture">
 		</div>
 		<ul class="lunch-items">
-			<li class="lunch-item">item</li>
-			<li class="lunch-item">item</li>
+			<li class="lunch-item"
+				ng-repeat="item in user.inv"
+				ng-click="submitActiveItem(item._id)">
+				<span>{{item.name}}</span>
+				<img ng-src="item.url">
+			</li>
 		</ul>
 	</section>
 
 	<section>
-		<label for="">Change Password</label>
-		<input type="text" name="old-password">
-		<input type="text" name="new-password">
-		<button type="submit" class="lunch-button">change password</button>
-	</section>
-
-	<section>
+		<h3>Change Notifications</h3>
 		<p>
-			<input type="checkbox" id="lunch-overview">
+			<input type="checkbox" name="lunch-overview"
+				ng-change="submitNotifications()"
+				ng-model="user.noti.overv">
 			<label for="lunch-overview">Send me an overview about what venues my collegues chose</label>
 		</p>
 		<p>
-			<input type="checkbox" id="lunch-remind">
+			<input type="checkbox" name="lunch-remind"
+				ng-change="submitNotifications()"
+				ng-model="user.noti.remind">
 			<label for="lunch-remind">Remind me when to choose a venue</label>
 		</p>
+	</section>
+
+	<section>
+		<h3>Change Password</h3>
+		<form name="passForm">
+			<fieldset>
+				<div>
+					<input type="password" name="oldPass"
+						ng-model="passFormData.oldPass"
+						required>
+					<label for="oldPass">Old Password</label>
+					<div ng-show="passForm.oldPass.$dirty && passForm.oldPass.$invalid">
+						<span>Field required</span>
+					</div>
+				</div>
+				<div>
+					<input type="password" name="newPass"
+						ng-model="passFormData.newPass"
+						required>
+					<label for="newPass">New Password</label>
+					<div ng-show="passForm.newPass.$dirty && passForm.newPass.$invalid">
+						<span>Field required</span>
+					</div>
+				</div>
+				<button type="submit" class="lunch-button"
+					ng-click="submitPassForm"
+					ng-disabled="passForm.$invalid">change password</button>
+			</fieldset>
+		</form>
+
 	</section>
 
 </div>
