--- a/templates/view.admin.html
+++ b/templates/view.admin.html
@@ -3,10 +3,48 @@
 	<h1>Admin Panel</h1>
 
 	<section>
-		<div>
-			<h2>Users</h2>
-			<button>Add User</button>
-			<button>Remove User</button>
+		<h2>Global Options</h2>
+	</section>
+
+	<section>
+		<h2>Users</h2>
+
+		<div><!-- sub-section -->
+			<div><!-- drop-down-group -->
+				<button>Add New User</button>
+				<div><!-- drop-down content -->
+					<form>
+						<fieldset>
+							<div>
+								<input type="text" name="some_name" value="">
+								<label for=""></label>
+								<div>
+									<span>Error</span>
+								</div>
+							</div>
+
+						</fieldset>
+					</form>
+				</div>
+			</div>
+
+			<div>
+				<button>Delete Selected User(s)</button>
+				<div>
+					<form>
+						<fieldset>
+							<div>
+								<input type="text" name="some_name" value="">
+								<label for=""></label>
+								<div>
+									<span>Error</span>
+								</div>
+							</div>
+
+						</fieldset>
+					</form>
+				</div>
+			</div>
 		</div>
 
 		<ul class="lunch-users">
@@ -27,10 +65,28 @@
 	</section>
 
 	<section>
-		<div>
-			<h2>Items</h2>
-			<button>Add User</button>
-			<button>Remove User</button>
+		<h2>Items</h2>
+
+		<div><!-- sub-section -->
+			<div><!-- drop-down-group -->
+				<button>Add New Item</button>
+				<div><!-- drop-down content -->
+					<form>
+						<fieldset>
+							<div>
+								<input type="text" name="some_name" value="">
+								<label for=""></label>
+								<div>
+									<span>Error</span>
+								</div>
+							</div>
+
+						</fieldset>
+					</form>
+				</div>
+			</div>
+
+			<button>Delete Selected Item(s)</button>
 		</div>
 
 		<ul class="lunch-items">
