--- a/templates/view.admin.html
+++ b/templates/view.admin.html
@@ -16,6 +16,15 @@
 					<form>
 						<fieldset>
 							<div>
+
+								<!--
+									IDEA:
+									statt einzelner Inputs können wir auch erstmal ein textfeld
+									mit einer Standard-JSON einsetzen, die man modifizieren
+									und dann direkt absetzen kann.
+									Geht vielleicht schneller für den Anfang.
+								-->
+
 								<input type="text" name="some_name" value="">
 								<label for=""></label>
 								<div>
