--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -46,7 +46,9 @@
 
 
 // General styles
-
+html {
+	-webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
+}
 html, body {
 	height: auto;
 	background-color: #fff;
