--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -9,6 +9,7 @@
 		<title>19:13 Lunchpad</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Style -->
 		<link rel="stylesheet" href="../static/css/app.css">
