--- a/dev/sass/_util.animations.scss
+++ b/dev/sass/_util.animations.scss
@@ -14,7 +14,8 @@
 
 // state change animation
 .lunch-view-container.ng-enter, .lunch-view-container.ng-leave {
-	@include transition( all .7s ease );
+	@include transition-property( transform, opacity );
+	@include transition-duration( .7s );
 }
 
 
@@ -26,9 +27,9 @@
 	position: fixed;
 	top: 0;
 	left:0;
-	opacity: 0;
+	opacity: 1;
 	@include transform(translateX(100%));
-	width: 100%;
+	//width: 100%;
 }
 
 .lunch-view-container.ng-enter-active {
@@ -84,6 +85,7 @@
 
 	.lunch-view-container.ng-enter {
 		position: fixed;
+		width: 61.8%;
 		top:0;
 		left:0;
 		@include transform(translateX(100%));
@@ -166,31 +168,6 @@
 
 
 /*
- * Guest Container
- */
-/* .lunch-venue-guests.ng-add, .lunch-venue-guests.ng-remove {
-	@include transition( all .7s ease );
-}
-
-.lunch-venue-guests.ng-add {
-	max-height: 0px;
-}
-
-.lunch-venue-guests.ng-add-active {
-	max-height: 300px;
-}
-
-.lunch-venue-guests.ng-remove {
-	max-height: 300px;
-}
-
-.lunch-venue-guests.ng-remove-active {
-	max-height: 0px;
-} */
-
-
-
-/*
  * Guest Animation
  */
 .lunch-venue-guest.ng-enter, .lunch-venue-guest.ng-leave {
@@ -249,9 +226,6 @@
 .anim-status-fade.ng-leave-active {
 	opacity: 0;
 }
-
-
-
 
 
 
