small bugfiy with settings route

--- a/templates/tmpl.navi.html
+++ b/templates/tmpl.navi.html
@@ -13,7 +13,7 @@
 			<a href="#/" class="lunch-fn-new">New Venue</a>
 		</li>
 		<li class="lunch-nav-elem">
-			<a href="#/settings" class="lunch-fn-settings">Profile</a>
+			<a href="#/settings/self" class="lunch-fn-settings">Profile</a>
 		</li>
 		<li class="lunch-nav-elem" ng-show="user.role == 'admin'">
 			<a href="#/admin" class="lunch-fn-settings">Admin Panel</a>
