--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -26,6 +26,10 @@ $lunch-clr-blue-drk: #0083A3;
 $lunch-clr-red: #FF0046;
 $lunch-clr-red-drk: #C90037;
 
+$lunch-clr-yellow: #FFEC88;
+
+$lunch-clr-white: #fff;
+
 // Timer
 $lunch-time-over: 100ms;
 $lunch-time-out: 750ms;
