--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -46,7 +46,7 @@
 
 
 	<section class="lunch-comments">
-		<div class="lunch-comment" ng-repeat="comment in comments">
+		<div class="lunch-comment lunch-animate" ng-repeat="comment in comments">
 			<div class="lunch-comment-info">
 				<div class="lunch-commentator-img">
 					<img src="{{comment.user.ava}}" alt="">
