--- a/dev/sass/app.scss
+++ b/dev/sass/app.scss
@@ -9,6 +9,7 @@
 @import "compass/css3/transition";
 @import "compass/css3/box-sizing";
 @import "compass/css3/border-radius";
+@import "compass/css3/box-shadow";
 @import "compass/css3/font-face";
 
 // Imported
