--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -51,7 +51,7 @@
 				<div class="lunch-commentator-img">
 					<img src="{{comment.user.ava}}" alt="">
 				</div>
-				<time>{{comment.data}}</time>
+				<time>{{comment.date | date: 'HH:mm'}}</time>
 				<h3>{{comment.user.nick}}</h3>
 			</div>
 			<p>{{comment.txt}}</p>
@@ -60,7 +60,7 @@
 
 		<form action="" class="lunch-comment lunch-comment-input">
 			<div class="lunch-commentator-img">
-				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<img src="{{user.ava}}" alt="" class="lunch-user-image">
 			</div>
 				<textarea type="text" placeholder="Got something to say?" ng-model="formInputTxt"></textarea>
 				<button class="lunch-fn-comment-send" ng-click="sendComment()">
