--- a/templates/mail.reminder.rising/html.ejs
+++ b/templates/mail.reminder.rising/html.ejs
@@ -1,2 +1,2 @@
 <h1> Hello <%= user.nick %> <h1>
-<p>Check out the new venue <%= venue.name %>, <span>added at <%= venue.createdAt %></span>.
+<p>Check out the rising venue <%= venue.name %>, <span>added at <%= venue.createdAt %></span>.
