--- a/templates/mail.reminder.rising/text.ejs
+++ b/templates/mail.reminder.rising/text.ejs
@@ -1,2 +1,2 @@
 Hello <%= user.nick %>
-Check out the new venue <%= venue.name %>, added at <%= venue.createdAt %>.
+Check out the rising venue <%= venue.name %>, added at <%= venue.createdAt %>.
